supbundle/yamls/namespaced/kube-system/networking.k8s.io/v1/networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-monitoring
      meta.helm.sh/release-namespace: cattle-monitoring-system
    creationTimestamp: "2024-08-06T01:56:59Z"
    generation: 1
    labels:
      app.kubernetes.io/managed-by: Helm
    managedFields:
    - apiVersion: networking.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/managed-by: {}
        f:spec:
          f:egress: {}
          f:ingress: {}
          f:podSelector: {}
          f:policyTypes: {}
      manager: helm
      operation: Update
      time: "2024-08-06T01:56:59Z"
    name: rancher-monitoring-coredns-allow-all
    namespace: kube-system
    resourceVersion: "7563"
    uid: cc6a0c9f-4f91-41df-8dd3-b0c9316a9621
  spec:
    egress:
    - {}
    ingress:
    - {}
    podSelector:
      matchLabels:
        k8s-app: kube-dns
    policyTypes:
    - Ingress
    - Egress
  status: {}
kind: List
metadata:
  resourceVersion: "770187"
